# scout

./: .claude_config.json  .eslintrc.json  .gitignore  ACTIVE_APP_DETECTION.md  AUDIO_FORMAT_PRESERVATION.md  BUILD_RELEASE.sh  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  COPY_IMAGE_INSTRUCTION.md  CSS_MIGRATION_PLAN.md  DEBUG_LOGGING.md  DESIGN_IMPROVEMENTS.md  FIX_ICON.md  GRID_SYSTEM_IMPLEMENTATION.md  OPEN_OVERLAY_DEVTOOLS.md  PRESS-KIT.md  PRODUCTION_HARDENING_PLAN.md  README.md  RELEASE_NOTES.md  RELEASE_STATUS.md  ROADMAP.md  RUN_TESTS.md  SIMPLIFIED_WORKFLOW_INTEGRATION.md  STATS_VIEW_ALIGNMENT_FIX.md  TESTING_SPEC.md  TEST_ONBOARDING.md  TEST_SUMMARY.md  UX_FIXES_SUMMARY.md  audio-architecture-review.md  benchmark-progressive-chunks.sh  clear-onboarding.js  index.html  launch_scout.sh  mcps.mcp.json  native-overlay.html  overlay.html  package.json  pnpm-lock.yaml  postcss.config.js  (+6 more)
scout-transcriber/: Cargo.toml  PARAKEET_SETUP.md  README.md  SETUP.md  install-service.sh  load_test.py  quickstart.sh  scout-transcriber.plist  test_client.py  test_control_plane.py  test_pipeline.py  test_real_audio.py  test_uuid_format.py  test_zmq_service.py  transcriber  zmq_proxy.py  zmq_test_client.py
scout-transcriber/examples/: demo.rs
scout-transcriber/python/: transcriber.py  zmq_server_worker.py  zmq_server_worker_no_deps.py  zmq_worker.py
scout-transcriber/src/: lib.rs  main.rs
scout-transcriber/src/protocol/: mod.rs
scout-transcriber/src/queue/: mod.rs  monitor.rs  zeromq.rs
scout-transcriber/src/worker/: mod.rs
src-tauri/: Cargo.toml  DEBUG_INSTRUCTIONS.md  WHISPER_RS_STREAMING_RESEARCH_REPORT.md  benchmark_test_data.json  build.rs  chunk_size_benchmark_results.json  chunking_analysis_report.md  comprehensive_chunking_analysis_v2.json  coreml_benchmark_results.json  cpu_only_benchmark.json  detailed_bakeoff_results.json  download-models.sh  entitlements.plist  real_audio_chunking_analysis.json  real_transcription_comparison.json  real_whisper_results.json  tauri.conf.json  tauri.conf.json.backup  tauri.prod.conf.json  test_recorder.rs
src-tauri/benchmark_corpus/: .gitignore
src-tauri/benchmark_results/: benchmark_report_20250710_181645.json
src-tauri/capabilities/: default.json
src-tauri/examples/: minimal_recorder_demo.rs
src-tauri/icons/: AppIcon.icns  Scout_proper.icns  emojiIcon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_add_performance_metrics.sql  004_add_performance_timeline.sql  004_whisper_logs.sql  006_audio_metadata.sql  20250111000001_add_llm_outputs.sql
src-tauri/src/: clipboard.rs  dictionary_processor.rs  env.rs  file_based_ring_buffer_monitor.rs  keyboard_monitor.rs  lazy_model.rs  lib.rs  lib.rs.backup  logger.rs  model_state.rs  models.rs  overlay_position.rs  performance_logger.rs  performance_metrics_service.rs  performance_tracker.rs  post_processing.rs  processing_queue.rs  profanity_filter.rs  recording_progress.rs  recording_workflow.rs  ring_buffer_monitor.rs  service_manager.rs  settings.rs  simple_session_manager.rs  sound.rs  strategies.rs  transcription_context.rs  whisper_log_interceptor.rs  whisper_logger.rs
src-tauri/src/audio/: converter.rs  device_monitor.rs  format.rs  metadata.rs  mod.rs  notifications.rs  recorder.rs  resampler.rs  ring_buffer_recorder.rs  simple_cpal_recorder.rs  simple_recorder.rs  streaming_recorder_16khz.rs  test_metadata.rs  vad.rs  validation.rs  wav_file_reader.rs  wav_validator.rs
src-tauri/src/benchmarking/: benchmark_runner.rs  metrics.rs  mod.rs  strategy_tester.rs  test_data.rs
src-tauri/src/commands/: ai.rs  audio.rs  audio_devices.rs  dev_info.rs  diagnostics.rs  dictionary.rs  downloads.rs  files.rs  llm.rs  logs.rs  misc.rs  mod.rs  models.rs  overlay.rs  performance.rs  permissions.rs  process_management.rs  recording.rs  recording_core.rs  settings.rs  shortcuts.rs  sounds.rs  storage.rs  system.rs  test_transcription.rs  transcription.rs  transcripts.rs  ui.rs
src-tauri/src/core/: mod.rs  recording_progress.rs  transcription_context.rs
src-tauri/src/db/: mod.rs
src-tauri/src/foundation_models/: mod.rs
src-tauri/src/integrations/: mod.rs
src-tauri/src/llm/: engine.rs  mod.rs  models.rs  pipeline.rs  prompts.rs
src-tauri/src/macos/: BridgingHeader.h  active_app_detector.swift  app_context.rs  app_context_bridge.m  foundation_models.swift  foundation_models_bridge.h  foundation_models_bridge.m  foundation_models_ffi.rs  keyboard_bridge.rs  keyboard_monitor.swift  mod.rs  native_overlay.rs  overlay.swift  overlay_bridge.m  window_ext.rs
src-tauri/src/macos/native_overlay/: Logger.swift  (+5 more)
src-tauri/src/models/: lazy_model.rs  mod.rs  model_state.rs  models.rs
src-tauri/src/monitoring/: file_based_ring_buffer_monitor.rs  mod.rs  performance_metrics_service.rs  whisper_log_interceptor.rs
src-tauri/src/post_processing/: mod.rs  post_processing.rs  profanity_filter.rs
src-tauri/src/services/: audio_devices.rs  control_plane_monitor.rs  diagnostics.rs  downloads.rs  mod.rs  process_manager.rs  recording.rs  service_manager.rs  transcription.rs  transcripts.rs
src-tauri/src/transcription/: external_service.rs  external_strategy.rs  file_based_ring_buffer_transcriber.rs  mod.rs  native_streaming_strategy.rs  ring_buffer_transcriber.rs  simple_transcriber.rs  strategy.rs  streaming_transcriber.rs
src-tauri/src/ui/: mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/webhooks/: commands.rs  events.rs  mod.rs  models.rs  repository.rs  service.rs
src-tauri/tests/: README.md  audio_integration_tests.rs  simplified_pipeline_tests.rs  test_fixes.rs  test_short_transcriptions.rs
src-tauri/tests/common/: mod.rs  simplified_pipeline.rs
src-tauri/tests/integration/: mod.rs  model_caching_tests.rs  simplified_pipeline_integration.rs  transcription_workflow_tests.rs
src-tauri/tests/performance/: simplified_benchmarks.rs
src-tauri/tests/unit/: mod.rs  simple_recorder_tests.rs
transcriber/python/: README.md  parakeet_worker.py  pyproject.toml  test_ffmpeg.py  test_worker.py  transcriber.py  zmq_server_worker.py  zmq_server_worker_no_deps.py  zmq_worker.py
(+496 files in other folders)
