[package]
name = "scout-transcriber"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scout-transcriber"
path = "src/main.rs"

[dependencies]
# Queue and storage
sled = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"

# UUID support
uuid = { version = "1.10", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process management (included in tokio full features)

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding/decoding
hex = "0.4"

# Testing utilities (for tempfile in tests)
tempfile = "3.0"

# Futures utilities
futures = "0.3"
