[package]
name = "scout-transcriber"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scout-transcriber"
path = "src/main.rs"

[dependencies]
# Queue and messaging
zeromq = "0.4"
# Keep sled as optional for persistence if needed
sled = { version = "0.34", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# UUID support
uuid = { version = "1.10", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process management (included in tokio full features)

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding/decoding
hex = "0.4"

# Testing utilities (for tempfile in tests)
tempfile = "3.0"

# Random number generation (used in ZeroMQ tests)
rand = "0.8"

# Futures utilities
futures = "0.3"

[features]
default = ["zeromq-queue", "sled"]
zeromq-queue = []
sled-queue = ["sled"]
