[package]
name = "scout"
version = "0.1.0"
description = "Scout - Cross-platform local-first dictation app"
authors = ["Scout Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "macos-private-api", "protocol-asset", "tray-icon", "image-png" ] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.23.0", features = ["full"] }
whisper-rs = { version = "0.13.0", features = ["coreml"] }
hound = "3.5"
cpal = "0.15"
webrtc-vad = "0.4"
chrono = { version = "0.4.38", features = ["serde"] }
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "isomp4", "ogg", "vorbis"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
once_cell = "1.19"
anyhow = "1.0.86"
log = "0.4.22"
arboard = "3.4"
async-trait = "0.1"
rdev = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
libc = "0.2"

[dev-dependencies]
tempfile = "3.20"

[features]
# ... existing code ...

