[package]
name = "scout"
version = "0.1.0"
description = "Scout - Cross-platform local-first dictation app"
authors = ["Scout Team"]
edition = "2021"
default-run = "scout"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "scout"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "test_singleton"
path = "src/bin/test_singleton.rs"

[[bin]]
name = "create_benchmark_corpus"
path = "src/bin/create_benchmark_corpus.rs"

[[bin]]
name = "benchmark_progressive"
path = "src/bin/benchmark_progressive.rs"

[[bin]]
name = "test_progressive_real"
path = "src/bin/test_progressive_real.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "macos-private-api", "protocol-asset", "tray-icon", "image-png" ] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.23.0", features = ["full"] }
whisper-rs = { version = "0.13.0", features = ["coreml", "whisper-cpp-log"] }
hound = "3.5"
cpal = "0.15"
webrtc-vad = "0.4"
chrono = { version = "0.4.38", features = ["serde"] }
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "isomp4", "ogg", "vorbis"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
once_cell = "1.19"
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11"
arboard = "3.4"
async-trait = "0.1"
rdev = "0.5"
clap = { version = "4.0", features = ["derive"] }

# LLM dependencies
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = { version = "0.21", features = ["onig"] }
safetensors = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2.7"
libc = "0.2"

[dev-dependencies]
tempfile = "3.20"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
# Enable maximum optimizations
opt-level = 3
# Enable Link Time Optimization (LTO) for smaller binaries
lto = true
# Reduce binary size
codegen-units = 1
# Strip debug symbols
strip = true
# Panic = abort saves ~10% binary size
panic = "abort"

