[project]
name = "scout-transcriber"
version = "0.1.0"
description = "Python transcriber service for Scout"
requires-python = ">=3.10"
dependencies = [
    "pyzmq>=25.0.0",
    "msgpack>=1.0.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "openai-whisper>=20231117",
    "torch>=2.0.0",
    "ffmpeg-python>=0.2.0",  # Python bindings for FFmpeg
    "mlx-whisper>=0.2.0",
    # Note: parakeet-mlx installed separately to avoid dependency conflicts
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"